--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-express-boilerplate",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Typescript express boilerplate",
   "main": "server.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.6.0",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.6",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
@@ -20,7 +20,7 @@
     "express": "^4.16.2",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.15",
     "mongoose": "^4.13.11",
     "morgan": "^1.9.1",
     "nodemailer": "^4.4.1",
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "@types/async": "^2.0.45",
-    "@types/bcrypt-nodejs": "^0.0.30",
     "@types/bluebird": "^3.5.20",
     "@types/body-parser": "^1.16.8",
     "@types/compression": "0.0.36",
@@ -40,13 +39,13 @@
     "@types/mongodb": "^3.0.5",
     "@types/mongoose": "^4.7.34",
     "@types/morgan": "^1.7.35",
-    "@types/node": "^9.4.6",
+    "@types/node": "^9.6.51",
     "@types/nodemailer": "^4.3.4",
     "@types/passport": "^0.4.3",
     "@types/passport-local": "^1.0.32",
     "@types/request": "^2.47.0",
     "tsc-watch": "^1.0.31",
     "tslint": "^5.12.0",
-    "typescript": "^2.7.2"
+    "typescript": "^3.5.3"
   }
 }
